Attempt to fix spacing on home page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,3 +9,12 @@
 .author__urls-wrapper {
   display: none !important;
 }
+
+.archive__item-teaser {
+  margin-bottom: 1rem;
+}
+
+.archive__item-title {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
